修改总部首页-商品销售档案菜单图标和列表

--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -89,7 +89,6 @@
                                     <dl class="pull-left">
                                         <dt style="text-align:center"><i></i>档案数据</dt>
                                         <dd class="col-sm-6"><a href="javascript:searchData()"><span class="fa fa-file-o"></span>订单档案</a></dd>
-                                        <dd class="col-sm-6"><a href="javascript:searchItemData()"><span class="fa fa-file-o"></span>商品销售档案</a></dd>
                                         <dd class="col-sm-6"><a href="javascript:searchEmployeeData()"><span class="fa fa-newspaper-o"></span>员工档案</a></dd>
                                         <dd class="col-sm-6"><a href="javascript:goToUserProfileStat()"><span class="fa fa-user"></span>用户档案 </a></dd>
                                         <dd class="col-sm-6"><a href="javascript:searchArea()"><span class="fa fa-copy"></span>片区档案</a></dd>
@@ -99,6 +98,7 @@
                                         <dd class="col-sm-6" style="position:relative"><a href="javascript:goToDataFiles()"><span class="fa fa-server"></span>行为数据档案 </a>
                                             <img alt="" src="dist/img/beta.png" style="position:absolute; top:5px; width:40px; height:19px;"></dd>
                                         <dd class="col-sm-6"><a href="javascript:searchStoreData()"><span class="fa fa-book"></span>门店信息档案</a></dd>
+                                        <dd class="col-sm-6"><a href="javascript:searchItemData()"><span class="fa fa-cart-plus"></span>商品销售档案</a></dd>
 
                                     </dl>
                                     <dl class="pull-left">
