成本控制优化第13次

--- a/WebContent/cost_statistics/costStatistics_add.html
+++ b/WebContent/cost_statistics/costStatistics_add.html
@@ -595,13 +595,13 @@
     .nav-tabs-custom > .nav-tabs > li > a:hover{color: #3a90cb;}
     .nav-tabs-custom > .nav-tabs > li > a.secondTabLi{color: #83c0f5;}
     .nav-tabs-custom > .nav-tabs > li.active > a,.nav-tabs-custom > .nav-tabs > li.active > a:hover{background: #3a90cb; color: #fff;font-weight: bold; cursor: pointer;border-top-right-radius: 3px; border-top-left-radius: 3px; border-top: 2px solid #3a90cb; border-left: 1px solid #3a90cb; border-right:1px solid #3a90cb;}
-    .nav-tabs-custom > .nav-tabs > li.active > a.secondTabLi {background: #83c0f5; color: #fff;font-weight: bold; cursor: pointer;border-top-right-radius: 3px; border-top-left-radius: 3px; border-top: 1px solid #83c0f5; border-left: 1px solid #83c0f5; border-right:1px solid #83c0f5;}
+    .nav-tabs-custom > .nav-tabs > li.active > a.secondTabLi {background: #7ab4e6; color: #fff;font-weight: bold; cursor: pointer;border-top-right-radius: 3px; border-top-left-radius: 3px; border-top: 1px solid #7ab4e6; border-left: 1px solid #7ab4e6; border-right:1px solid #7ab4e6;}
 
     .nav-tabs-custom > .nav-tabs > li:first-of-type.active > a{border-left: 1px solid #3a90cb;}
-    .nav-tabs-custom > .nav-tabs > li:first-of-type.active > a.secondTabLi{border-left: 1px solid #83c0f5;}
+    .nav-tabs-custom > .nav-tabs > li:first-of-type.active > a.secondTabLi{border-left: 1px solid #7ab4e6;}
 
     .nav-tabs-custom > .nav-tabs{border-bottom: 1px solid #3a90cb; margin: 5px 0; }
-    .nav-tabs-custom > .secondTabUl{border-bottom: 1px solid #83c0f5; margin: 5px 0; }
+    .nav-tabs-custom > .secondTabUl{border-bottom: 1px solid #7ab4e6; margin: 5px 0; }
     .nav-tabs-custom > .nav-tabs > li{margin-bottom: -1px;}
     .table > tbody > tr > td,.table > tbody > tr > th{border: 1px solid #d1d1d1; height: 30px; line-height: 30px; padding: 0 8px;}
     .table > tbody > tr > td p,.table > tbody > tr > th p{width: 165px; margin: 0;}
